--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,9 @@ on:
       - '*'
     tags-ignore:
       - '*'
+  schedule:
+    # every Wed at 07:00 UTC
+    - cron:  '0 7 * * 3'
 
 jobs:
   test:
