--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
+[bumpversion]
+current_version = 0.1.0
+message = bump version → {new_version}
+commit = True
+tag = True
+sign_tags = True
+
+[bumpversion:file:setup.py]
+
+[bumpversion:file:th/_version.py]
+
 [aliases]
 test = pytest
 
@@ -27,5 +38,5 @@ show_missing = true
 [tool:pytest]
 testpaths = tests/
 python_files = test_*.py
-python_classes =
+python_classes = 
 python_functions = test_*
