--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,9 @@ line_length = 99
 multi_line_output = 3
 include_trailing_comma = true
 skip = __pycache__
-not_skip = __init__.py
-recursive = true
 
 [mypy]
-ignore_missing_imports = true
+ignore_missing_imports = false
 
 [coverage:run]
 branch = true
@@ -34,6 +32,8 @@ source = th
 
 [coverage:report]
 show_missing = true
+exclude_lines =
+    @abstractmethod
 
 [tool:pytest]
 testpaths = tests/
